syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/yourscarent/cars_manager/pkg/proto/gen;cm";

service CarsManager {
  rpc CreateCar(Car) returns (google.protobuf.Empty);
  rpc DeleteCar(ID) returns(google.protobuf.Empty);
  rpc UpdateCar(Update) returns(google.protobuf.Empty);
}

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  string type = 4;
  uint32 speed = 5;
  uint32 seats = 6;
  string color = 7;
  string description = 8;
}

message ID {
  string id = 1;
}

message Update {
  string color = 1;
  string description = 2;
}